# IntelRDFPMathLib

./: .gitignore  CMakeLists.txt  README
EXAMPLES/: CMakeLists.txt  README  decimal.h_000  decimal.h_001  decimal.h_010  decimal.h_011  decimal.h_100  decimal.h_101  decimal.h_110  decimal.h_111  main.c_000  main.c_001  main.c_010  main.c_011  main.c_100  main.c_101  main.c_110  main.c_111
TESTS/: CMakeLists.txt  readtest.c  readtest.h  test.cmake  test_bid_conf.h  test_bid_functions.h
